--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
         {% endif %}
       {{ content }}
       <footer class="entry-meta">
-         <span class="entry-categories">{% for tag in page.categories %}<a href="{{ site.url }}/categories#{{ category }}" title="Pages categorized {{ category }}" class="category"><span class="term">{{ category }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
+         <span class="entry-tags">{% for category in page.categories %}<a href="{{ site.url }}/categories#{{ category }}" title="Pages categorized {{ category }}" class="category"><span class="term">{{ category }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
         {% if page.modified %}<span>Updated on <span class="entry-date date updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
         {% endif %}
